--- a/Amst/Final Assignment/FeatureSelection_updated.ipynb
+++ b/Amst/Final Assignment/FeatureSelection_updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the preprocessed dataset\n",
-    "output_file_path = './preprocessed_data.csv'\n",
+    "output_file_path = './DataPreprocessed.csv'\n",
     "df = pd.read_csv(output_file_path, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
       "Initial VIF:\n",
       "               0                1               2                3                4                5                 6                     7                8          9          10        11           12        13        14\n",
       "Feature     const  AAPL_Log_Return  AMD_Log_Return  AVGO_Log_Return  INTC_Log_Return  QCOM_Log_Return  SP500_Log_Return  NASDAQCOM_Log_Return  DJIA_Log_Return        SMA        EMA      MACD  MACD_Signal       RSI       OBV\n",
-      "VIF      1.297009         1.732272        1.857909         1.910992         1.891851         2.482479         25.219477             20.260112         4.844392  13.753821  18.035117  5.556205     4.582626  1.515687  1.937126\n"
+      "VIF      1.297008         1.732272        1.857909         1.910992         1.891852          2.48248         25.219462             20.260106          4.84439  13.753856  18.035165  5.556204     4.582626  1.515687  1.937125\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
       "VIF after removing correlated features:\n",
       "               0                1               2                3                4                5                6         7            8         9         10\n",
       "Feature     const  AAPL_Log_Return  AMD_Log_Return  AVGO_Log_Return  INTC_Log_Return  QCOM_Log_Return  DJIA_Log_Return      MACD  MACD_Signal       RSI       OBV\n",
-      "VIF      1.127426         1.278655        1.497182         1.796191         1.885038         2.295644         1.202971  4.191634       3.5994  1.329044  1.756023\n"
+      "VIF      1.127426         1.278656        1.497183          1.79619         1.885039         2.295646         1.202971  4.191628     3.599398  1.329044  1.756022\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.552\n",
       "Method:                 Least Squares   F-statistic:                              23.87\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    4.28e-15\n",
-      "Time:                        15:20:21   Log-Likelihood:                         -54.942\n",
+      "Time:                        15:24:57   Log-Likelihood:                         -54.942\n",
       "No. Observations:                  93   AIC:                                      119.9\n",
       "Df Residuals:                      88   BIC:                                      132.5\n",
       "Df Model:                           5                                                  \n",
@@ -136,13 +136,13 @@
       "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
       "----------------------------------------------------------------------------------\n",
       "AMD_Log_Return     0.1782      0.069      2.587      0.011       0.041       0.315\n",
-      "MACD               0.8823      0.244      3.620      0.000       0.398       1.367\n",
+      "MACD               0.8822      0.244      3.620      0.000       0.398       1.367\n",
       "MACD_Signal       -0.4803      0.194     -2.471      0.015      -0.867      -0.094\n",
       "RSI                0.1980      0.085      2.337      0.022       0.030       0.366\n",
       "OBV                1.3692      0.335      4.081      0.000       0.702       2.036\n",
       "==============================================================================\n",
       "Omnibus:                       49.212   Durbin-Watson:                   1.921\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              163.522\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              163.523\n",
       "Skew:                           1.793   Prob(JB):                     3.10e-36\n",
       "Kurtosis:                       8.417   Cond. No.                         6.13\n",
       "==============================================================================\n",
@@ -150,7 +150,7 @@
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "Benchmark: corr (Y, Y_pred) = 0.7646341346520735\n",
+      "Benchmark: corr (Y, Y_pred) = 0.7646341886156496\n",
       "Hard Thresholding selected 5 features:  ['AMD_Log_Return' 'MACD' 'MACD_Signal' 'RSI' 'OBV']\n"
      ]
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.556\n",
       "Method:                 Least Squares   F-statistic:                              12.66\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    4.44e-13\n",
-      "Time:                        15:20:21   Log-Likelihood:                         -51.721\n",
+      "Time:                        15:24:57   Log-Likelihood:                         -51.721\n",
       "No. Observations:                  93   AIC:                                      123.4\n",
       "Df Residuals:                      83   BIC:                                      148.8\n",
       "Df Model:                          10                                                  \n",
@@ -201,7 +201,7 @@
       "INTC_Log_Return    -0.1943      0.131     -1.478      0.143      -0.456       0.067\n",
       "QCOM_Log_Return     0.1849      0.115      1.609      0.111      -0.044       0.413\n",
       "DJIA_Log_Return    -0.1101      0.078     -1.415      0.161      -0.265       0.045\n",
-      "MACD                0.8192      0.251      3.259      0.002       0.319       1.319\n",
+      "MACD                0.8191      0.251      3.259      0.002       0.319       1.319\n",
       "MACD_Signal        -0.5011      0.200     -2.505      0.014      -0.899      -0.103\n",
       "RSI                 0.2115      0.087      2.438      0.017       0.039       0.384\n",
       "OBV                 1.3520      0.342      3.948      0.000       0.671       2.033\n",
@@ -215,7 +215,7 @@
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "Ridge Regression: corr (Y, Y_pred) = 0.784551590196801\n",
+      "Ridge Regression: corr (Y, Y_pred) = 0.7845514887323637\n",
       "Ridge selected 10 features:  ['AAPL_Log_Return' 'AMD_Log_Return' 'AVGO_Log_Return' 'INTC_Log_Return'\n",
       " 'QCOM_Log_Return' 'DJIA_Log_Return' 'MACD' 'MACD_Signal' 'RSI' 'OBV']\n"
      ]
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.312\n",
       "Method:                 Least Squares   F-statistic:                              15.08\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    4.98e-08\n",
-      "Time:                        15:20:21   Log-Likelihood:                         -75.868\n",
+      "Time:                        15:24:57   Log-Likelihood:                         -75.868\n",
       "No. Observations:                  93   AIC:                                      157.7\n",
       "Df Residuals:                      90   BIC:                                      165.3\n",
       "Df Model:                           3                                                  \n",
@@ -264,7 +264,7 @@
       "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-----------------------------------------------------------------------------------\n",
       "AMD_Log_Return      0.2434      0.084      2.910      0.005       0.077       0.410\n",
-      "AVGO_Log_Return     0.2633      0.101      2.609      0.011       0.063       0.464\n",
+      "AVGO_Log_Return     0.2633      0.101      2.608      0.011       0.063       0.464\n",
       "RSI                 0.3442      0.098      3.508      0.001       0.149       0.539\n",
       "==============================================================================\n",
       "Omnibus:                       24.407   Durbin-Watson:                   2.035\n",
@@ -276,7 +276,7 @@
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "LASSO: corr (Y, Y_pred) = 0.577783101811834\n",
+      "LASSO: corr (Y, Y_pred) = 0.5777827211585845\n",
       "LASSO selected 3 features:  ['AMD_Log_Return' 'AVGO_Log_Return' 'RSI']\n"
      ]
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.523\n",
       "Method:                 Least Squares   F-statistic:                              17.97\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    1.91e-13\n",
-      "Time:                        15:20:21   Log-Likelihood:                         -57.320\n",
+      "Time:                        15:24:57   Log-Likelihood:                         -57.320\n",
       "No. Observations:                  93   AIC:                                      126.6\n",
       "Df Residuals:                      87   BIC:                                      141.8\n",
       "Df Model:                           6                                                  \n",
@@ -333,7 +333,7 @@
       "OBV                 1.5741      0.337      4.671      0.000       0.904       2.244\n",
       "==============================================================================\n",
       "Omnibus:                       42.075   Durbin-Watson:                   1.834\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              113.881\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              113.882\n",
       "Skew:                           1.594   Prob(JB):                     1.87e-25\n",
       "Kurtosis:                       7.385   Cond. No.                         6.60\n",
       "==============================================================================\n",
@@ -341,7 +341,7 @@
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "Elastic Net: corr (Y, Y_pred) = 0.7447087392954764\n",
+      "Elastic Net: corr (Y, Y_pred) = 0.7447088138550128\n",
       "ElasticNet selected 6 features:  ['AMD_Log_Return' 'AVGO_Log_Return' 'QCOM_Log_Return' 'MACD' 'RSI' 'OBV']\n"
      ]
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.520\n",
       "Method:                 Least Squares   F-statistic:                              17.78\n",
       "Date:                Tue, 10 Dec 2024   Prob (F-statistic):                    2.42e-13\n",
-      "Time:                        15:20:21   Log-Likelihood:                         -57.586\n",
+      "Time:                        15:24:57   Log-Likelihood:                         -57.586\n",
       "No. Observations:                  93   AIC:                                      127.2\n",
       "Df Residuals:                      87   BIC:                                      142.4\n",
       "Df Model:                           6                                                  \n",
@@ -402,7 +402,7 @@
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "LARS: corr (Y, Y_pred) = 0.7431175106280032\n",
+      "LARS: corr (Y, Y_pred) = 0.7431176263104847\n",
       "LARS selected 6 features:  ['AAPL_Log_Return' 'AMD_Log_Return' 'QCOM_Log_Return' 'MACD' 'RSI' 'OBV']\n"
      ]
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
