--- a/Amst/Final Assignment/featurePreparation_Preprocessed.ipynb
+++ b/Amst/Final Assignment/featurePreparation_Preprocessed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Load the dataset\n",
-    "file_path = './featurePrepared_updated.csv'\n",
+    "file_path = './DataCollected.csv'\n",
     "data = pd.read_csv(file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -93,12 +93,12 @@
      "text": [
       "\n",
       "Stationarity Test Results for Log Returns (Augmented Dickey-Fuller Test):\n",
-      "NVDA_Log_Return: ADF Statistic = -4.2007457663407, p-value = 0.0006569875519274155\n",
-      "AAPL_Log_Return: ADF Statistic = -14.643977090051415, p-value = 3.586880960428085e-27\n",
+      "NVDA_Log_Return: ADF Statistic = -4.200746149666034, p-value = 0.0006569865701633264\n",
+      "AAPL_Log_Return: ADF Statistic = -14.643984060413343, p-value = 3.5867942605599006e-27\n",
       "AMD_Log_Return: ADF Statistic = -16.261640879235742, p-value = 3.5608330755696156e-29\n",
-      "AVGO_Log_Return: ADF Statistic = -5.396186697955492, p-value = 3.450233364699498e-06\n",
-      "INTC_Log_Return: ADF Statistic = -7.574539137558502, p-value = 2.7840734034420457e-11\n",
-      "QCOM_Log_Return: ADF Statistic = -17.34411762819908, p-value = 5.3184455361993844e-30\n",
+      "AVGO_Log_Return: ADF Statistic = -5.3961866751447545, p-value = 3.4502337451226206e-06\n",
+      "INTC_Log_Return: ADF Statistic = -7.574539370524751, p-value = 2.7840696593031397e-11\n",
+      "QCOM_Log_Return: ADF Statistic = -17.344115187018136, p-value = 5.318462375314627e-30\n",
       "SP500_Log_Return: ADF Statistic = -14.89779849919029, p-value = 1.523010431815754e-27\n",
       "NASDAQCOM_Log_Return: ADF Statistic = -15.38144048482431, p-value = 3.4033535862210936e-28\n",
       "DJIA_Log_Return: ADF Statistic = -13.929390544375279, p-value = 5.122444892808757e-26\n"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -127,14 +127,14 @@
      "text": [
       "\n",
       "Stationarity Test Results for Transformed Indicators (Augmented Dickey-Fuller Test):\n",
-      "SMA: ADF Statistic = -2.8334440127972913, p-value = 0.05365304614312315\n",
+      "SMA: ADF Statistic = -2.8334442020608126, p-value = 0.05365302086671547\n",
       "Warning: SMA might still not be stationary. Consider further transformation.\n",
-      "EMA: ADF Statistic = -2.716803845259827, p-value = 0.07117533451465402\n",
+      "EMA: ADF Statistic = -2.716803901194609, p-value = 0.07117532513325883\n",
       "Warning: EMA might still not be stationary. Consider further transformation.\n",
-      "MACD: ADF Statistic = -3.5519986233831924, p-value = 0.0067478732208123915\n",
-      "MACD_Signal: ADF Statistic = -3.8252016359518217, p-value = 0.0026597419179716594\n",
-      "RSI: ADF Statistic = -16.437594488529147, p-value = 2.4450010219248583e-29\n",
-      "OBV: ADF Statistic = -7.170098640492137, p-value = 2.8191278012017403e-10\n"
+      "MACD: ADF Statistic = -3.5520208303188188, p-value = 0.006747383342239966\n",
+      "MACD_Signal: ADF Statistic = -3.825127655836131, p-value = 0.0026604393329288096\n",
+      "RSI: ADF Statistic = -16.437590696877898, p-value = 2.4450201554280454e-29\n",
+      "OBV: ADF Statistic = -7.1700972051029295, p-value = 2.819150746991044e-10\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -427,42 +427,42 @@
       "\n",
       "Correlation Matrix:\n",
       "                      NVDA_Log_Return  AAPL_Log_Return  AMD_Log_Return  \\\n",
-      "NVDA_Log_Return              1.000000         0.028607        0.301177   \n",
+      "NVDA_Log_Return              1.000000         0.028607        0.301176   \n",
       "AAPL_Log_Return              0.028607         1.000000        0.069161   \n",
-      "AMD_Log_Return               0.301177         0.069161        1.000000   \n",
+      "AMD_Log_Return               0.301176         0.069161        1.000000   \n",
       "AVGO_Log_Return              0.435255         0.233386        0.271454   \n",
-      "INTC_Log_Return              0.098696         0.165709        0.404682   \n",
+      "INTC_Log_Return              0.098696         0.165710        0.404682   \n",
       "QCOM_Log_Return              0.348301         0.287092        0.406606   \n",
-      "SP500_Log_Return             0.438562         0.407507        0.437895   \n",
-      "NASDAQCOM_Log_Return         0.572143         0.478765        0.479104   \n",
+      "SP500_Log_Return             0.438562         0.407508        0.437895   \n",
+      "NASDAQCOM_Log_Return         0.572143         0.478766        0.479104   \n",
       "DJIA_Log_Return              0.068162         0.250026        0.235767   \n",
-      "SMA                          0.149502        -0.004160       -0.150096   \n",
+      "SMA                          0.149502        -0.004159       -0.150096   \n",
       "EMA                          0.230465        -0.071708       -0.146732   \n",
-      "MACD                         0.362137        -0.001999        0.098083   \n",
+      "MACD                         0.362138        -0.001999        0.098083   \n",
       "MACD_Signal                  0.022388        -0.100982       -0.121937   \n",
-      "RSI                          0.436542        -0.018749        0.086286   \n",
-      "OBV                          0.676721         0.065406        0.172532   \n",
+      "RSI                          0.436542        -0.018748        0.086286   \n",
+      "OBV                          0.676722         0.065407        0.172532   \n",
       "\n",
       "                      AVGO_Log_Return  INTC_Log_Return  QCOM_Log_Return  \\\n",
       "NVDA_Log_Return              0.435255         0.098696         0.348301   \n",
-      "AAPL_Log_Return              0.233386         0.165709         0.287092   \n",
+      "AAPL_Log_Return              0.233386         0.165710         0.287092   \n",
       "AMD_Log_Return               0.271454         0.404682         0.406606   \n",
-      "AVGO_Log_Return              1.000000         0.197922         0.468673   \n",
-      "INTC_Log_Return              0.197922         1.000000         0.515392   \n",
-      "QCOM_Log_Return              0.468673         0.515392         1.000000   \n",
+      "AVGO_Log_Return              1.000000         0.197921         0.468672   \n",
+      "INTC_Log_Return              0.197921         1.000000         0.515392   \n",
+      "QCOM_Log_Return              0.468672         0.515392         1.000000   \n",
       "SP500_Log_Return             0.482938         0.358734         0.521752   \n",
       "NASDAQCOM_Log_Return         0.564772         0.366922         0.554832   \n",
       "DJIA_Log_Return              0.279965         0.275906         0.309248   \n",
       "SMA                          0.003626         0.067983         0.080129   \n",
-      "EMA                          0.036286         0.053392         0.106434   \n",
+      "EMA                          0.036285         0.053392         0.106434   \n",
       "MACD                         0.200018         0.023030         0.172745   \n",
       "MACD_Signal                 -0.036925        -0.041953         0.009227   \n",
-      "RSI                          0.244446         0.199822         0.140638   \n",
-      "OBV                          0.386125         0.123590         0.213974   \n",
+      "RSI                          0.244446         0.199822         0.140639   \n",
+      "OBV                          0.386126         0.123590         0.213974   \n",
       "\n",
       "                      SP500_Log_Return  NASDAQCOM_Log_Return  DJIA_Log_Return  \\\n",
       "NVDA_Log_Return               0.438562              0.572143         0.068162   \n",
-      "AAPL_Log_Return               0.407507              0.478765         0.250026   \n",
+      "AAPL_Log_Return               0.407508              0.478766         0.250026   \n",
       "AMD_Log_Return                0.437895              0.479104         0.235767   \n",
       "AVGO_Log_Return               0.482938              0.564772         0.279965   \n",
       "INTC_Log_Return               0.358734              0.366922         0.275906   \n",
@@ -473,32 +473,32 @@
       "SMA                           0.079551              0.110817        -0.065671   \n",
       "EMA                           0.081386              0.096750        -0.069605   \n",
       "MACD                          0.138860              0.158792         0.013770   \n",
-      "MACD_Signal                  -0.087313             -0.116950        -0.091831   \n",
-      "RSI                           0.178912              0.262954         0.109090   \n",
+      "MACD_Signal                  -0.087313             -0.116950        -0.091832   \n",
+      "RSI                           0.178912              0.262955         0.109091   \n",
       "OBV                           0.286842              0.404180         0.096425   \n",
       "\n",
       "                           SMA       EMA      MACD  MACD_Signal       RSI  \\\n",
-      "NVDA_Log_Return       0.149502  0.230465  0.362137     0.022388  0.436542   \n",
-      "AAPL_Log_Return      -0.004160 -0.071708 -0.001999    -0.100982 -0.018749   \n",
+      "NVDA_Log_Return       0.149502  0.230465  0.362138     0.022388  0.436542   \n",
+      "AAPL_Log_Return      -0.004159 -0.071708 -0.001999    -0.100982 -0.018748   \n",
       "AMD_Log_Return       -0.150096 -0.146732  0.098083    -0.121937  0.086286   \n",
-      "AVGO_Log_Return       0.003626  0.036286  0.200018    -0.036925  0.244446   \n",
+      "AVGO_Log_Return       0.003626  0.036285  0.200018    -0.036925  0.244446   \n",
       "INTC_Log_Return       0.067983  0.053392  0.023030    -0.041953  0.199822   \n",
-      "QCOM_Log_Return       0.080129  0.106434  0.172745     0.009227  0.140638   \n",
+      "QCOM_Log_Return       0.080129  0.106434  0.172745     0.009227  0.140639   \n",
       "SP500_Log_Return      0.079551  0.081386  0.138860    -0.087313  0.178912   \n",
-      "NASDAQCOM_Log_Return  0.110817  0.096750  0.158792    -0.116950  0.262954   \n",
-      "DJIA_Log_Return      -0.065671 -0.069605  0.013770    -0.091831  0.109090   \n",
-      "SMA                   1.000000  0.884579  0.105089     0.184504 -0.116653   \n",
-      "EMA                   0.884579  1.000000  0.467577     0.529231 -0.004400   \n",
-      "MACD                  0.105089  0.467577  1.000000     0.778422  0.182843   \n",
-      "MACD_Signal           0.184504  0.529231  0.778422     1.000000  0.085175   \n",
-      "RSI                  -0.116653 -0.004400  0.182843     0.085175  1.000000   \n",
+      "NASDAQCOM_Log_Return  0.110817  0.096750  0.158792    -0.116950  0.262955   \n",
+      "DJIA_Log_Return      -0.065671 -0.069605  0.013770    -0.091832  0.109091   \n",
+      "SMA                   1.000000  0.884579  0.105089     0.184505 -0.116654   \n",
+      "EMA                   0.884579  1.000000  0.467577     0.529232 -0.004400   \n",
+      "MACD                  0.105089  0.467577  1.000000     0.778422  0.182844   \n",
+      "MACD_Signal           0.184505  0.529232  0.778422     1.000000  0.085175   \n",
+      "RSI                  -0.116654 -0.004400  0.182844     0.085175  1.000000   \n",
       "OBV                   0.036210  0.137401  0.368380     0.079198  0.418092   \n",
       "\n",
       "                           OBV  \n",
-      "NVDA_Log_Return       0.676721  \n",
-      "AAPL_Log_Return       0.065406  \n",
+      "NVDA_Log_Return       0.676722  \n",
+      "AAPL_Log_Return       0.065407  \n",
       "AMD_Log_Return        0.172532  \n",
-      "AVGO_Log_Return       0.386125  \n",
+      "AVGO_Log_Return       0.386126  \n",
       "INTC_Log_Return       0.123590  \n",
       "QCOM_Log_Return       0.213974  \n",
       "SP500_Log_Return      0.286842  \n",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Preprocessed data saved to ./preprocessed_data.csv\n"
+      "Preprocessed data saved to ./DataPreprocessed.csv\n"
      ]
     }
    ],
