--- a/Amst/Final Assignment/Models.ipynb
+++ b/Amst/Final Assignment/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import Ridge, Lasso, ElasticNet\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n"
+    "from sklearn.metrics import mean_squared_error, r2_score, make_scorer\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,105 +29,135 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Simple Linear Models"
+    "# Simple Linear Models + Grid Search "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge Regression: MSE=0.1664, R²=0.4597\n"
+      "Lasso Best Params: {'alpha': np.float64(0.001)}\n",
+      "Lasso Best Score: -0.22434255156934046\n",
+      "Test MSE with Best Found Parameters: 0.14744746488716604\n"
      ]
     }
    ],
    "source": [
-    "# Ridge Regression\n",
-    "ridge_alpha = 1.0\n",
-    "ridge_model = Ridge(alpha=ridge_alpha)\n",
-    "ridge_model.fit(X_train, y_train)\n",
-    "y_pred_ridge = ridge_model.predict(X_test)\n",
-    "ridge_mse = mean_squared_error(y_test, y_pred_ridge)\n",
-    "ridge_r2 = r2_score(y_test, y_pred_ridge)\n",
-    "print(f\"Ridge Regression: MSE={ridge_mse:.4f}, R²={ridge_r2:.4f}\")"
+    "# Lasso \n",
+    "param_grid = {\n",
+    "    #'alpha': [0.001, 0.01, 0.1, 1.0, 10.0] # Lasso Best Params: {'alpha': 0.001}\n",
+    "    'alpha': np.linspace(0.0001, 0.1, 1000)\n",
+    "    }\n",
+    "scorer = make_scorer(mean_squared_error, greater_is_better=False)\n",
+    "lasso = Lasso()\n",
+    "grid_search_lasso = GridSearchCV(\n",
+    "    estimator=lasso,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring=scorer,\n",
+    "    cv=10,              \n",
+    "    n_jobs=-1       \n",
+    ")\n",
+    "\n",
+    "grid_search_lasso.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Lasso Best Params:\", grid_search_lasso.best_params_)\n",
+    "print(\"Lasso Best Score:\", grid_search_lasso.best_score_)\n",
+    "\n",
+    "best_lasso = grid_search_lasso.best_estimator_\n",
+    "test_predictions = best_lasso.predict(X_test)\n",
+    "test_mse = mean_squared_error(y_test, test_predictions)\n",
+    "print(\"Test MSE with Best Found Parameters:\", test_mse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso Regression: MSE=0.2465, R²=0.1999\n"
+      "Ridge Best Params: {'alpha': np.float64(0.1)}\n",
+      "Ridge Best Score: -0.22396397790112138\n",
+      "Test MSE with Best Found Parameters: 0.14931016916267184\n"
      ]
     }
    ],
    "source": [
-    "# Lasso Regression\n",
-    "lasso_alpha = 0.1\n",
-    "lasso_model = Lasso(alpha=lasso_alpha)\n",
-    "lasso_model.fit(X_train, y_train)\n",
-    "y_pred_lasso = lasso_model.predict(X_test)\n",
-    "lasso_mse = mean_squared_error(y_test, y_pred_lasso)\n",
-    "lasso_r2 = r2_score(y_test, y_pred_lasso)\n",
-    "print(f\"Lasso Regression: MSE={lasso_mse:.4f}, R²={lasso_r2:.4f}\")"
+    "# Ridge\n",
+    "param_grid_ridge = {\n",
+    "    #'alpha': [0.01, 0.1, 1.0, 10.0, 100.0] # Ridge Best Params: {'alpha': 0.01}\n",
+    "    'alpha': np.linspace(0.0001, 0.1, 1000)\n",
+    "}\n",
+    "scorer = make_scorer(mean_squared_error, greater_is_better=False)\n",
+    "ridge = Ridge()\n",
+    "grid_search_ridge = GridSearchCV(\n",
+    "    estimator=ridge, \n",
+    "    param_grid=param_grid_ridge, \n",
+    "    scoring=scorer, \n",
+    "    cv=10, \n",
+    "    n_jobs=-1)\n",
+    "grid_search_ridge.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Ridge Best Params:\", grid_search_ridge.best_params_)\n",
+    "print(\"Ridge Best Score:\", grid_search_ridge.best_score_)\n",
+    "\n",
+    "best_ridge = grid_search_ridge.best_estimator_\n",
+    "test_predictions = best_ridge.predict(X_test)\n",
+    "test_mse = mean_squared_error(y_test, test_predictions)\n",
+    "print(\"Test MSE with Best Found Parameters:\", test_mse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elastic Net Regression: MSE=0.2397, R²=0.2219\n"
+      "Elastic Net Best Params: {'alpha': np.float64(0.0014563484775012444), 'l1_ratio': np.float64(0.1)}\n",
+      "Elastic Net Best Score: -0.22396922947459932\n",
+      "Test MSE with Best Found Parameters: 0.15008664886357723\n"
      ]
     }
    ],
    "source": [
-    "# Elastic Net Regression\n",
-    "elastic_alpha = 0.1\n",
-    "l1_ratio = 0.5  # balance between Lasso (L1) and Ridge (L2)\n",
-    "elastic_model = ElasticNet(alpha=elastic_alpha, l1_ratio=l1_ratio)\n",
-    "elastic_model.fit(X_train, y_train)\n",
-    "y_pred_elastic = elastic_model.predict(X_test)\n",
-    "elastic_mse = mean_squared_error(y_test, y_pred_elastic)\n",
-    "elastic_r2 = r2_score(y_test, y_pred_elastic)\n",
-    "print(f\"Elastic Net Regression: MSE={elastic_mse:.4f}, R²={elastic_r2:.4f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Ridge Coefficients: [0.14845719 0.20883352 0.38377557 1.15849552 0.14945522 0.08644744]\n",
-      "Lasso Coefficients: [0.05076371 0.16680758 0.         0.         0.16554196 0.        ]\n",
-      "Elastic Net Coefficients: [0.10858576 0.22231175 0.2107422  0.01001973 0.19356388 0.02595629]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\nRidge Coefficients:\", ridge_model.coef_)\n",
-    "print(\"Lasso Coefficients:\", lasso_model.coef_)\n",
-    "print(\"Elastic Net Coefficients:\", elastic_model.coef_)"
+    "# Elastic Net\n",
+    "param_grid_elastic = {\n",
+    "    # 'alpha': [0.01, 0.1, 1.0], # Elastic Net Best Params: {'alpha': 0.01, 'l1_ratio': 0.9}\n",
+    "    # 'l1_ratio': [0.1, 0.5, 0.9]\n",
+    "    'alpha': np.logspace(-3, -1, 50), \n",
+    "    'l1_ratio': np.linspace(0.1, 1.0, 10)  \n",
+    "}\n",
+    "scorer = make_scorer(mean_squared_error, greater_is_better=False)\n",
+    "elastic = ElasticNet()\n",
+    "grid_search_elastic = GridSearchCV(\n",
+    "    estimator=elastic, \n",
+    "    param_grid=param_grid_elastic, \n",
+    "    scoring=scorer, \n",
+    "    cv=10, \n",
+    "    n_jobs=-1)\n",
+    "grid_search_elastic.fit(X_train, y_train)\n",
+    "print(\"Elastic Net Best Params:\", grid_search_elastic.best_params_)\n",
+    "print(\"Elastic Net Best Score:\", grid_search_elastic.best_score_)\n",
+    "\n",
+    "best_elastic = grid_search_elastic.best_estimator_\n",
+    "test_predictions = best_elastic.predict(X_test)\n",
+    "test_mse = mean_squared_error(y_test, test_predictions)\n",
+    "print(\"Test MSE with Best Found Parameters:\", test_mse)\n"
    ]
   }
  ],
